<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.ManageVehicles.add_edit_vehicle">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="75dp"
        android:layout_height="34dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:lineSpacingExtra="14sp"
        android:text="Brand"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_select_brand"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner_select_brand"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="224dp"
        android:layout_height="33dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editText_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Model "
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_select_brand" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:text="Reg No"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_reg_no_letters"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_reg_no_letters"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Reg No"
        android:inputType="textPersonName"
        android:maxLength="5"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_reg_no_number"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="Insurance Expiry Date"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/insurance_date"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/insurance_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        android:text="Tap here"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_reg_no_number" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Revenue License Expiry"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/revenue_license_expiry"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/revenue_license_expiry"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        android:text="Tap here"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insurance_date" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:text="Next Service Date"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/next_service"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/next_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        android:text="Tap here"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/revenue_license_expiry" />

    <TextView
        android:id="@+id/textViewModel"
        android:layout_width="75dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:lineSpacingExtra="14sp"
        android:text="Model"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_model"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Name"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Eg:-Family Car"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:text="Mileage"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextMileage"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextMileage"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_service" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="-"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_reg_no_letters"
        app:layout_constraintEnd_toStartOf="@+id/editText_reg_no_number"
        app:layout_constraintStart_toEndOf="@+id/editText_reg_no_letters" />

    <EditText
        android:id="@+id/editText_reg_no_number"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Number"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_model" />

</android.support.constraint.ConstraintLayout>
